<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="24dp"
        android:text="@string/language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:checkedButton="@id/radioButtonEnglish"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLanguage">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonEnglish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_language_tab_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/english"
            android:textColor="?colorOnSurface"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonFarsi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_language_tab_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/farsi"
            android:textColor="?colorOnSurface"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="24dp"
        android:text="@string/theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupLanguage" />


    <RadioGroup
        android:id="@+id/radioGroupTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:checkedButton="@id/radioButtonLight"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTheme">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonLight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_language_tab_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/light"
            android:textColor="?colorOnSurface"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_language_tab_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/dark"
            android:textColor="?colorOnSurface"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioButtonSystem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/drawable_language_tab_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/system"
            android:textColor="?colorOnSurface"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFingerPrint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingHorizontal="24dp"
        android:text="@string/login_by_biometrics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroupTheme" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swFingerPrint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/radioGroupTheme"
        app:layout_constraintTop_toBottomOf="@id/tvFingerPrint"
        android:enabled="false"
        />





</androidx.constraintlayout.widget.ConstraintLayout>