<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
           android:id="@+id/tvLoginTitle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/login"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:layout_marginTop="30dp"
           android:textStyle="bold"
           android:textSize="20sp"
           />

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/etLoginEmail"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="38dp"
           android:layout_marginTop="24dp"
           android:hint="@string/email"
           app:errorEnabled="true"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/tvLoginTitle">
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/etEditLoginEmail"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textEmailAddress"
               android:textColor="?colorOnBackground" />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/etLoginPassword"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="38dp"
           android:layout_marginTop="10dp"
           android:hint="@string/password"
           app:errorEnabled="true"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/etLoginEmail">
           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/etEditLoginPassword"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textPassword"
               android:textColor="?colorOnBackground" />
       </com.google.android.material.textfield.TextInputLayout>

       <androidx.appcompat.widget.AppCompatTextView
           android:id="@+id/tvForgetPassword"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/forget_password"
           app:layout_constraintEnd_toEndOf="@+id/etLoginPassword"
           app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />

       <androidx.appcompat.widget.AppCompatButton
           android:id="@+id/btnLogin"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="50dp"
           android:layout_marginTop="30dp"
           android:text="@string/login"
           app:layout_constraintTop_toBottomOf="@+id/tvForgetPassword" />

       <androidx.appcompat.widget.AppCompatTextView
           android:id="@+id/tvDontHaveAccount"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="20dp"
           android:text="@string/don_t_have_an_account"
           app:layout_constraintEnd_toStartOf="@+id/tvRegister"
           app:layout_constraintHorizontal_chainStyle="packed"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

       <androidx.appcompat.widget.AppCompatTextView
           android:id="@+id/tvRegister"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="10dp"
           android:layout_marginTop="20dp"
           android:textStyle="bold"
           android:text="@string/register"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toEndOf="@+id/tvDontHaveAccount"
           app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>