<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvMovieName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/favoriteImage"
        tools:text="movie name" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/favoriteImage"
        android:layout_width="30dp"
        android:layout_height="30dp"
        tools:background="@drawable/ic_round_favorite_24"
        app:layout_constraintEnd_toStartOf="@+id/btnShare"
        app:layout_constraintTop_toTopOf="@+id/btnShare"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnShare"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@+id/tvMovieName"
        app:layout_constraintBottom_toBottomOf="@+id/tvMovieName"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_round_share_24"
        android:clickable="true"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivMovie"
        android:layout_width="200dp"
        android:layout_height="260dp"
        android:layout_marginTop="12dp"
        android:background="@color/purple_100"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="4:5"
        app:layout_constraintStart_toStartOf="@id/tvMovieName"
        app:layout_constraintTop_toBottomOf="@+id/tvMovieName"
        app:layout_goneMarginStart="24dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerRound"
        tools:src="@tools:sample/avatars[2]" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressOnPoster"
        style="?android:attr/progressBarStyleSmall"
        android:indeterminateOnly="true"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@id/ivMovie"
        app:layout_constraintEnd_toEndOf="@id/ivMovie"
        app:layout_constraintStart_toStartOf="@id/ivMovie"
        app:layout_constraintTop_toTopOf="@id/ivMovie" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/IMDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/imdb"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/ivMovie"
        app:layout_constraintTop_toTopOf="@+id/ivMovie" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvIMDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/IMDB"
        app:layout_constraintTop_toTopOf="@id/IMDB"
        tools:text="9.8" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/Year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/year"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/IMDB"
        app:layout_constraintTop_toBottomOf="@id/IMDB" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/Year"
        app:layout_constraintTop_toTopOf="@id/Year"
        tools:text="1991" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/Rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/rated"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/Year"
        app:layout_constraintTop_toBottomOf="@id/Year" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/Rate"
        app:layout_constraintTop_toTopOf="@id/Rate"
        tools:text="R" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/Country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/country"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/Rate"
        app:layout_constraintTop_toBottomOf="@id/Rate" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@id/Country"
        app:layout_constraintTop_toTopOf="@id/Country"
        tools:text="Netherlands" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/Genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/genres"
        android:textColor="?colorSecondaryVariant"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@id/ivMovie"
        app:layout_constraintTop_toBottomOf="@id/ivMovie" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGenres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Genres"
        tools:text="Crime , Drama" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/director"
        android:textColor="?colorSecondaryVariant"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@id/Genres"
        app:layout_constraintTop_toBottomOf="@id/tvGenres" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDirector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/director"
        tools:text="Farshad" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/Actors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/actors"
        android:textColor="?colorSecondaryVariant"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@id/Genres"
        app:layout_constraintTop_toBottomOf="@id/tvDirector" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvActors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tvGenres"
        app:layout_constraintTop_toBottomOf="@id/Actors"
        tools:text="Tim Robbins, Morgan Freeman, Bob Gunton, William Sadler" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/Plot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/plot"
        android:textColor="?colorSecondaryVariant"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@id/Genres"
        app:layout_constraintTop_toBottomOf="@id/tvActors" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPlot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tvGenres"
        app:layout_constraintTop_toBottomOf="@id/Plot"
        tools:text="Two imprisoned men bond over a number of years, finding solace and eventual redemption through acts of common decency." />

</androidx.constraintlayout.widget.ConstraintLayout>